syntax = "proto2";

package editoptionfield;

option go_package = "./editoptionfield";

enum Field {
  UNDEFINED = 0;
  TITLE = 1;
  DESCRIPTION = 2;
}

message EditOptionField {
  required Field field = 1;
  optional int32 poll_id = 2;
  optional int32 option_id = 3;
  optional int32 referrer_my_polls_page = 4;
}