syntax = "proto2";

package editpollfield;

option go_package = "./editpollfield";

enum Field {
  UNDEFINED = 0;
  TITLE = 1;
  DESCRIPTION = 2;
  START_DATE = 3;
  FINISH_DATE = 4;
}

message EditPollField {
  required Field field = 1;
  optional int32 poll_id = 2;
  optional int32 referrer_my_polls_page = 3;
}