syntax = "proto2";

package userpollresult;

option go_package = "./userpollresult";

message UserPollResult {
  required int64 user_id = 1;
  required int32 poll_id = 2;
}